artifacts/perf/frankentorch-kgs4.109/pass2f_api_proof_max_pool1d_with_test.log
   Compiling ft-kernel-cpu v0.1.0 (/data/projects/frankentorch/crates/ft-kernel-cpu)
   Compiling ft-dispatch v0.1.0 (/data/projects/frankentorch/crates/ft-dispatch)
   Compiling ft-autograd v0.1.0 (/data/projects/frankentorch/crates/ft-autograd)
   Compiling ft-api v0.1.0 (/data/projects/frankentorch/crates/ft-api)
error[E0428]: the name `functional_max_pool1d_fused_matches_reshape_2d_forward_and_backward_bits` is defined multiple times
      --> crates/ft-api/src/lib.rs:106002:5
       |
105953 |     fn functional_max_pool1d_fused_matches_reshape_2d_forward_and_backward_bits() {
       |     ----------------------------------------------------------------------------- previous definition of the value `functional_max_pool1d_fused_matches_reshape_2d_forward_and_backward_bits` here
...
106002 |     fn functional_max_pool1d_fused_matches_reshape_2d_forward_and_backward_bits() {
       |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `functional_max_pool1d_fused_matches_reshape_2d_forward_and_backward_bits` redefined here
       |
       = note: `functional_max_pool1d_fused_matches_reshape_2d_forward_and_backward_bits` must be defined only once in the value namespace of this module

For more information about this error, try `rustc --explain E0428`.
error: could not compile `ft-api` (lib test) due to 1 previous error
